# search-index

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.ts  deno.json  mod.ts  package-lock.json  package.json  test.ts
.devcontainer/: devcontainer.json
.github/workflows/: cargo.yml  deno.yml
__snapshots__/: test.ts.snap
character_index/: .managed.json  meta.json
media_index/: .managed.json  meta.json
src/: characters.rs  lib.rs  main.rs  media.rs  media_cache.json
test/: test.mjs  test.ts
