[package]
name = "dyn-images"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.63"
image = { version = "0.24.6", default-features = false, features = ["png"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 2
