[package]
name = "search-index"
version = "0.2.4"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
unidecode = "0.3.0"
rkyv = "0.7.44"
levenshtein_automata = "0.2.1"
hashbrown = { version = "0.14.3", features = ["rkyv"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 2
